0.548 (04.12.2007) - John Siracusa <siracusa@mindspring.com>

    * Added maxlength limit to TextArea.
    * Changed the behavior of internal_value() on RadioButtonGroup objects
      to return the selected value in scalar context, rather than a reference 
      to an array.
    * Changed the behavior of internal_value() on SelectBox objects to
      return an array ref in scalar context only when multiple() is true.
    * Fixed a TextArea bug that prevented errors from showing up in
      the html() and xhtml() output.  (Reported by Drew Taylor)
    * Silenced an uninitialized value warning in Rose::HTML::Form.
      (Reported by Peter Karman)

0.547 (02.23.2007) - John Siracusa <siracusa@mindspring.com>

    * Eliminated redundant validation of fields in nested forms.
    * Made is_empty() smarter about honoring the trim_spaces() setting.
    * Pop-up menus and other group-type fields now correctly clear errors
      on reset() and clear().
    * Fixed a bug that caused option containers to fail to display hidden
      fields when a selected option had a false, but defined value.
      (Reported by Andrei Kozovski)
    * Fixed a bug that caused a fatal error when requesting a subfield of a
      compound field from a form that does not contain the parent field.
    * Fixed a bug that caused input_value() in on/off groups to treat any
      reference as an array reference.  (Reported by Derek Watson)

0.546 (01.15.2007) - John Siracusa <siracusa@mindspring.com>

    * Fixed a bug that prevented params() from correctly cascading to
      nested forms.
    * Added a field_value() method to the Compound field class.
      (Suggested by Guillermo Roditi)
    * Added a cascade parameter to validate(), which defaults to true.
      (Suggested by Guillermo Roditi)

0.545 (12.08.2006) - John Siracusa <siracusa@mindspring.com>

    * Added param_exists_for_field() method to Rose::HTML::Form.
    * Added positive() and negative() methods to integer fields.